Added redux and react router

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -7,7 +7,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 4px;
+  padding: 12px;
   div {
     div {
       div {
@@ -28,7 +28,7 @@ body {
       div.forgot-password-section {
         text-align: right;
         a {
-          font-size: 14px;
+          font-size: 12px;
           color: #656565;
           cursor: pointer;
         }
@@ -61,6 +61,7 @@ body {
 .form-control {
   label {
     color: #2f2f2f !important;
+    font-size: 14px !important;
   }
   div::before {
     border-bottom: 1px solid rgba(0, 0, 0, 0.42);
@@ -80,6 +81,7 @@ body {
 .form-control-error {
   label {
     color: #ff0000 !important;
+    font-size: 14px !important;
   }
   div::before {
     border-bottom: 1px solid #ff0000;
@@ -94,9 +96,13 @@ body {
   input {
     color: #ff0000 !important;
   }
+  p {
+    color: #ff0000 !important;
+  }
 }
 
 .btn {
   color: #2f2f2f !important;
-    border: 1px solid rgb(148, 148, 148);
+  border: 1px solid rgb(148, 148, 148);
+  font-size: 14px !important;
 }
