--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -27,12 +27,12 @@ body {
       }
       div.forgot-password-section {
         text-align: right;
-        a {
+        span {
           font-size: 12px;
           color: #656565;
           cursor: pointer;
         }
-        a:hover, a:active {
+        span:hover, span:active {
           color: #2f2f2f;
         }
       }
