--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,6 +3,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+button {
+  min-width: 20px !important;
+}
+
 .auth-wrapper {
   display: flex;
   justify-content: center;
@@ -11,7 +15,7 @@ body {
   padding: 12px;
   div.auth {
     padding: 24px;
-    box-shadow: 0px 0px 22px 11px #eee;
+    box-shadow: 0px 0px 22px 11px #f1f1f1;
     margin-top: 25px;
     margin-bottom: 25px;
     border-radius: 8px;
@@ -70,7 +74,7 @@ body {
 
 .form-control {
   label {
-    color: #2f2f2f !important;
+    color: #c5c5c5 !important;
     font-size: 14px !important;
   }
   div::before {
@@ -78,10 +82,10 @@ body {
   }
   div::after {
     transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
-    border-bottom: 2px solid #2f2f2f;
+    border-bottom: 2px solid #c5c5c5;
   }
   div:hover::before {
-    border-bottom: 2px solid #2f2f2f !important;
+    border-bottom: 2px solid #c5c5c5 !important;
   }
   input {
     color: #5a5a5a !important;
