--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -7,6 +7,11 @@ button {
   min-width: 20px !important;
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+  margin: 0px;
+  color: #555;
+}
+
 .auth-wrapper {
   display: flex;
   justify-content: center;
@@ -122,15 +127,17 @@ button {
 }
 
 .cards-wrapper {
-  padding: 16px;
+  padding: 8px;
   .card{
     border-radius: 4px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+    // box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+    border: 1px solid #eee;
     padding: 8px;
     position: relative;
     cursor: pointer;
     &.active {
-      box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.1);
+      // box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
     }
     .fixed-top {
       position: absolute;
@@ -158,9 +165,9 @@ button {
         button {
           background-color: orange;
           color: #fff;
-          margin-right: 5px;
-          font-size: 12px;
-          padding: 4px 8px;
+          margin-right: 4px;
+          font-size: 10px;
+          padding: 2px 4px;
         }
         button:last-child {
           margin-right: 0px;
@@ -186,4 +193,23 @@ button {
 
 .grow-1 {
   flex-grow: 1;
+}
+
+.app-bar {
+  background-color: orange !important;
+}
+
+.top-spacer {
+  height: 70px;
+}
+
+.sidebar-wrapper {
+  padding: 10px;
+  .sidebar {
+    padding: 8px;
+    border: 1px solid #eee;
+    h2 {
+      font-weight: 500;
+    }
+  }
 }
