--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -149,13 +149,14 @@ p, h1, h2, h3, h4, h5, h6 {
       }
     }
     .card-image-wrapper {
-      height: 100%;
+      height: 280px;
       width: 100%;
       overflow: hidden;
       position: relative;
       img {
-        object-fit: contain;
+        object-fit: cover;
         width: 100%;
+        height: 100%;
       }
       .fixed-buttons {
         position: absolute;
@@ -212,4 +213,19 @@ p, h1, h2, h3, h4, h5, h6 {
       font-weight: 500;
     }
   }
+}
+
+
+
+@media (max-width: 1199px){
+
+}
+@media (max-width: 991px){
+  
+}
+@media (max-width: 767px){
+  
+}
+@media (max-width: 575px){
+  
 }
